[B]Version 1.0.3 - 2013-05-12[/B]
- Updated addon to match JSON changes on site
- Added setting to hide DRM protected channels

[B]Version 1.0.2 - 2012-12-25[/B]
- Updated addon to match changes to website

[B]Version 1.0.1 - 2012-10-22[/B]
- Added buggalo url

[B]Version 1.0.0 - 2012-07-04[/B]
- Updated graphics for first public release

[B]Version 0.0.5 - 2012-06-13[/B]
- Website changes

[B]Version 0.0.4 - 2012-06-08[/B]
- Fixed login and playback

[B]Version 0.0.3 - 2012-06-07[/B]
- Fixed settings

[B]Version 0.0.2[/B]
- Added login support

[B]Version 0.0.1[/B]
- Proof of concept