@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.stofa.dk" version="1.0.3" name="Stofa web-tv" provider-name="twinther">
+<addon id="plugin.video.stofa.dk" version="1.0.4" name="Stofa web-tv" provider-name="twinther">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
         <import addon="script.module.buggalo" version="1.1.2"/>
